k8s-cluster/options/ingress/ingress-api-public.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zhe-raptor-api-public
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
spec:
  rules:
    - host: "$(zhe_hostname)"
      http:
        paths:
          - path: /public/graphql/*
            pathType: Prefix
            backend:
              service:
                name: raptor-api
                port:
                  number: 80
          - path: /public/graphql
            pathType: Prefix
            backend:
              service:
                name: raptor-api
                port:
                  number: 80
  tls:
    - hosts:
        - $(zhe_hostname)
      secretName: <host_ssl_secret>
