k8s-cluster/options/ingress/ingress-cable.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zhe-raptor-cable
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
spec:
  rules:
    - host: "$(subdomain_suffix).$(domain_tld)"
      http:
        paths:
          - path: /cable/
            pathType: Prefix
            backend:
              service:
                name: raptor-cable
                port:
                  number: 80
  tls:
    - hosts:
        - $(subdomain_suffix).$(domain_tld)
      secretName: <host_ssl_secret>
