k8s-cluster/options/ingress/ingress-devsite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev-zhe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # terminated by nginx-gateway pod
spec:
  rules:
    - host: "$(devsite_zhe_hostname)"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: devsite
                port:
                  number: 80
  defaultBackend:
    service:
      name: devsite
      port:
        number: 80
  tls:
    - hosts:
        - $(devsite_zhe_hostname)
      secretName: <host_ssl_secret>
