k8s-cluster/options/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zhe
spec:
  rules:
    - host: "$(subdomain_suffix).$(domain_tld)"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 443
    - host: "admin-$(subdomain_suffix).$(domain_tld)"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: admin-ui
                port:
                  number: 443
