k8s-cluster/options/ingress/set-ingress-annotation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zhe
  annotations:
