k8s-cluster/options/ingress/set-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zhe
spec:
  tls:
    - hosts:
        - "$(subdomain_suffix).$(domain_tld)"
        - admin-$(subdomain_suffix).$(domain_tld)
      secretName: <host_ssl_secret>
